--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,16 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Sync with main repository 
         run: |
           git pull origin main
 
-      - name: Set up Docker Buildx
+      - 
+        # Buildx action for Docker Buildx https://github.com/docker/buildx
+        # Action marketplace: https://github.com/marketplace/actions/build-and-push-docker-images
+        name: Set up Docker Buildx    
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
